# SmartCharsetConverter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README-en.md  README.md  build_on_win32.bat  config_on_win.bat  vcpkg.json
.github/workflows/: cmake-single-platform.yml
sample/: expected.txt  readme.txt  ubuntu-22.04.2-desktop-amd64.iso.torrent  澤野弘之.lrc
sample/expect_pass/: [gb18030]你还戴着这副眼镜.txt
sample/not_pass_yet/: [GB18030]DialogAnimation.h  [GB18030]LogRecord.h  [GB18030]TBarTool_GB.cpp  [GB18030]TDraw.h  [GB18030]TMenu.cpp  [GB18030]一个字.txt  [GB18030]编译说明.txt  [GB18030]连杆.cpp  [UTF-8]CMakeLists.txt  [UTF-8]TBarTool.cpp  [UTF-8]虚拟机环境.txt
sample/tcvn/: demo1-tcvn.txt  demo1-utf16le.txt  demo1-utf8.txt
sample/uchardet_test_samples/: uchardet-tests.c
scripts/: extract_change_log.py
src/: CLIHandler.cpp  CLIHandler.h  CMakeLists.txt  CharsetCode.cpp  Config.h  Core.cpp  Core.h  DialogMain.cpp  DialogMain.h  Language.cpp  Language.h  LineBreaks.cpp  SmartCharsetConverter.cpp  SmartCharsetConverter.rc  doublemap.h  resource.h
src/Common/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  ConsoleSettings.cpp  ConsoleSettings.h  ControlStyle.h  ErrorFunction.cpp  ErrorFunction.h  FileFunction.cpp  FileFunction.h  LogRecord.cpp  LogRecord.h  ResourceLoader.cpp  ResourceLoader.h  SingleApplication.h  TimeStamp.cpp  TimeStamp.h  noncopyable.h  tstring.cpp  tstring.h
src/Control/: CMakeLists.txt  TListView.cpp  TListView.h  TMenu.cpp  TMenu.h
src/Core/: CMakeLists.txt  CharsetCode.cpp  CharsetCode.h  Config.cpp  Config.h  Core.cpp  Core.h  Detect.cpp  Detect.h  Exceptions.cpp  Exceptions.h  Language.cpp  LineBreaks.cpp  LineBreaks.h  Messages.h  TranslatorBase.h  UCNVHelper.cpp  UCNVHelper.h  Vietnamese.cpp  Vietnamese.h  cedHelper.h
src/Resource/lang_embed/: English.json  Simplified Chinese.json  Spanish.json
src/SmartCharsetConverter/: CLIHandler.cpp  CLIHandler.h  CMakeLists.txt  DialogMain.cpp  DialogMain.h  SmartCharsetConverter.cpp  SmartCharsetConverter.json  SmartCharsetConverter.rc  resource.h
src/SmartCharsetConverter-imgui/: CMakeLists.txt  FontAnalyzer.h  FontLoader.cpp  FontLoader.h  ListView.cpp  ListView.h  MainWindow.cpp  MainWindow.h  UnicodeTable.cpp  UnicodeTable.h  main.cpp
src/SmartCharsetConverter-imgui/Resource/lang_embed/: English.json  Simplified Chinese.json  Spanish.json
src/SmartCharsetConverter/Resource/lang_embed/: English.json  Simplified Chinese.json  Spanish.json
src/ThreadPool/: SafeQueue.h  ThreadPool.h
src/Translator/: CMakeLists.txt  LanguageService.cpp  LanguageService.h  StringId.h  Translator.h
src/Translator/internal/: Language.cpp  Language.h
src/test/: Core_test.cpp  LineBreaks_test.cpp  String_test.cpp  Vietnamese_test.cpp  config.h.in  icu_test.cpp  memory_leak_detection_win.h  uchardet_samples_test.cpp
tests/: CMakeLists.txt  Core_Vietnamese_test.cpp  Core_test.cpp  Helper.cpp  Helper.h  String_test.cpp  Vietnamese_test.cpp  config.h.in  icu_test.cpp  memory_leak_detection.h  uchardet_samples_test.cpp
